# SongPlayer

./: AudioInfoBox.qml  AudioSearchModel.cpp  AudioSearchModel.h  Audioinfo.cpp  Audioinfo.h  CMakeLists.txt  ChooseTheme.qml  ImageButton.qml  Main.qml  Playercontroller.cpp  Playercontroller.h  PlaylistPanel.qml  PopUp.qml  README.md  SearchField.qml  SearchField.qml.autosave  SearchPanel.qml  main.cpp  qml.qrc  skin.cpp
